@@ -2,11 +2,13 @@ NAME
     Mo::utils - Mo utilities.
 
 SYNOPSIS
-     use Mo::utils qw(check_array check_array_object check_bool check_code check_isa check_length check_number
-             check_number_of_items check_regexp check_required check_string_begin check_strings);
+     use Mo::utils qw(check_array check_array_object check_array_required check_bool
+             check_code check_isa check_length check_number check_number_of_items
+             check_regexp check_required check_string_begin check_strings);
 
      check_array($self, $key);
      check_array_object($self, $key, $class, $class_name);
+     check_array_required($self, $key);
      check_bool($self, $key);
      check_code($self, $key);
      check_isa($self, $key, $class);
@@ -37,6 +39,16 @@ SUBROUTINES
     Check parameter defined by $key which is reference to array with
     instances of some object type ($class). $class_name is used to error
     message.
+
+    Put error if check isn't ok.
+
+    Returns undef.
+
+  "check_array_required"
+     check_array_required($self, $key);
+
+    Check parameter defined by $key which is reference to array for at least
+    one value inside.
 
     Put error if check isn't ok.
 
@@ -148,6 +160,12 @@ ERRORS
      check_array_object():
              Parameter '%s' must be a array.
              %s isn't '%s' object.
+
+     check_array_required():
+             Parameter '%s' must be a array.
+                     Value: %s
+                     Reference: %s
+             Parameter '%s' with array must have at least one item.
 
      check_bool():
              Parameter '%s' must be a bool (0/1).
@@ -278,6 +296,43 @@ EXAMPLE5
      use strict;
      use warnings;
 
+     use Mo::utils qw(check_array_required);
+
+     my $self = {
+             'key' => ['value'],
+     };
+     check_array_required($self, 'key');
+
+     # Print out.
+     print "ok\n";
+
+     # Output:
+     # ok
+
+EXAMPLE6
+     use strict;
+     use warnings;
+
+     use Error::Pure;
+     use Mo::utils qw(check_array_object);
+
+     $Error::Pure::TYPE = 'Error';
+
+     my $self = {
+             'key' => [],
+     };
+     check_array_required($self, 'key');
+
+     # Print out.
+     print "ok\n";
+
+     # Output like:
+     # #Error [..utils.pm:?] TODO.
+
+EXAMPLE7
+     use strict;
+     use warnings;
+
      use Mo::utils qw(check_bool);
      use Test::MockObject;
 
@@ -292,7 +347,7 @@ EXAMPLE5
      # Output:
      # ok
 
-EXAMPLE6
+EXAMPLE8
      use strict;
      use warnings;
 
@@ -312,7 +367,7 @@ EXAMPLE6
      # Output like:
      # #Error [..utils.pm:?] Parameter 'key' must be a bool (0/1).
 
-EXAMPLE7
+EXAMPLE9
      use strict;
      use warnings;
 
@@ -330,7 +385,7 @@ EXAMPLE7
      # Output:
      # ok
 
-EXAMPLE8
+EXAMPLE10
      use strict;
      use warnings;
 
@@ -350,7 +405,7 @@ EXAMPLE8
      # Output like:
      # #Error [..utils.pm:?] Parameter 'key' must be a code.
 
-EXAMPLE9
+EXAMPLE11
      use strict;
      use warnings;
 
@@ -368,7 +423,7 @@ EXAMPLE9
      # Output:
      # ok
 
-EXAMPLE10
+EXAMPLE12
      use strict;
      use warnings;
 
@@ -387,7 +442,7 @@ EXAMPLE10
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must be a 'Test::MockObject' object.
 
-EXAMPLE11
+EXAMPLE13
      use strict;
      use warnings;
 
@@ -406,7 +461,7 @@ EXAMPLE11
      # Output like:
      # ok
 
-EXAMPLE12
+EXAMPLE14
      use strict;
      use warnings;
 
@@ -425,7 +480,7 @@ EXAMPLE12
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' has length greater than '2'.
 
-EXAMPLE13
+EXAMPLE15
      use strict;
      use warnings;
 
@@ -442,7 +497,7 @@ EXAMPLE13
      # Output:
      # ok
 
-EXAMPLE14
+EXAMPLE16
      use strict;
      use warnings;
 
@@ -461,7 +516,7 @@ EXAMPLE14
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must be a number.
 
-EXAMPLE15
+EXAMPLE17
      use strict;
      use warnings;
 
@@ -503,7 +558,7 @@ EXAMPLE15
      # Output like:
      # ok
 
-EXAMPLE16
+EXAMPLE18
      use strict;
      use warnings;
 
@@ -545,7 +600,7 @@ EXAMPLE16
      # Output like:
      # #Error [...utils.pm:?] Test for Item 'value1' has multiple values.
 
-EXAMPLE17
+EXAMPLE19
      use strict;
      use warnings;
 
@@ -562,7 +617,7 @@ EXAMPLE17
      # Output:
      # ok
 
-EXAMPLE18
+EXAMPLE20
      use strict;
      use warnings;
 
@@ -582,7 +637,7 @@ EXAMPLE18
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' does not match the specified regular expression.
 
-EXAMPLE19
+EXAMPLE21
      use strict;
      use warnings;
 
@@ -599,7 +654,7 @@ EXAMPLE19
      # Output:
      # ok
 
-EXAMPLE20
+EXAMPLE22
      use strict;
      use warnings;
 
@@ -619,7 +674,7 @@ EXAMPLE20
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' is required.
 
-EXAMPLE21
+EXAMPLE23
      use strict;
      use warnings;
 
@@ -636,7 +691,7 @@ EXAMPLE21
      # Output:
      # ok
 
-EXAMPLE22
+EXAMPLE24
      use strict;
      use warnings;
 
@@ -656,7 +711,7 @@ EXAMPLE22
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must begin with defined string base.
 
-EXAMPLE23
+EXAMPLE25
      use strict;
      use warnings;
 
@@ -673,7 +728,7 @@ EXAMPLE23
      # Output:
      # ok
 
-EXAMPLE24
+EXAMPLE26
      use strict;
      use warnings;
 
