@@ -9,8 +9,8 @@ use List::Util qw(none);
 use Readonly;
 use Scalar::Util qw(blessed);
 
-Readonly::Array our @EXPORT_OK => qw(check_array check_array_object check_bool
-	check_code check_isa check_length check_number check_number_of_items
+Readonly::Array our @EXPORT_OK => qw(check_array check_array_object check_array_required
+	check_bool check_code check_isa check_length check_number check_number_of_items
 	check_regexp check_required check_string_begin check_strings);
 
 our $VERSION = 0.18;
@@ -41,6 +41,22 @@ sub check_array_object {
 		if (! $obj->isa($class)) {
 			err $class_name." isn't '".$class."' object.";
 		}
+	}
+
+	return;
+}
+
+sub check_array_required {
+	my ($self, $key) = @_;
+
+	if (! exists $self->{$key}) {
+		return;
+	}
+
+	check_array($self, $key);
+
+	if (! @{$self->{$key}}) {
+		err "Parameter '".$key."' with array must have at least one item.";
 	}
 
 	return;
@@ -238,11 +254,13 @@ Mo::utils - Mo utilities.
 
 =head1 SYNOPSIS
 
- use Mo::utils qw(check_array check_array_object check_bool check_code check_isa check_length check_number
-         check_number_of_items check_regexp check_required check_string_begin check_strings);
+ use Mo::utils qw(check_array check_array_object check_array_required check_bool
+         check_code check_isa check_length check_number check_number_of_items
+         check_regexp check_required check_string_begin check_strings);
 
  check_array($self, $key);
  check_array_object($self, $key, $class, $class_name);
+ check_array_required($self, $key);
  check_bool($self, $key);
  check_code($self, $key);
  check_isa($self, $key, $class);
@@ -276,6 +294,17 @@ Returns undef.
 
 Check parameter defined by C<$key> which is reference to array with instances
 of some object type (C<$class>). C<$class_name> is used to error message.
+
+Put error if check isn't ok.
+
+Returns undef.
+
+=head2 C<check_array_required>
+
+ check_array_required($self, $key);
+
+Check parameter defined by C<$key> which is reference to array for at least one
+value inside.
 
 Put error if check isn't ok.
 
@@ -396,6 +425,12 @@ Returns undef.
  check_array_object():
          Parameter '%s' must be a array.
          %s isn't '%s' object.
+
+ check_array_required():
+         Parameter '%s' must be a array.
+                 Value: %s
+                 Reference: %s
+         Parameter '%s' with array must have at least one item.
 
  check_bool():
          Parameter '%s' must be a bool (0/1).
@@ -536,6 +571,49 @@ Returns undef.
 
 =head1 EXAMPLE5
 
+=for comment filename=check_array_required_ok.pl
+
+ use strict;
+ use warnings;
+
+ use Mo::utils qw(check_array_required);
+
+ my $self = {
+         'key' => ['value'],
+ };
+ check_array_required($self, 'key');
+
+ # Print out.
+ print "ok\n";
+
+ # Output:
+ # ok
+
+=head1 EXAMPLE6
+
+=for comment filename=check_array_required_fail.pl
+
+ use strict;
+ use warnings;
+
+ use Error::Pure;
+ use Mo::utils qw(check_array_required);
+
+ $Error::Pure::TYPE = 'Error';
+
+ my $self = {
+         'key' => [],
+ };
+ check_array_required($self, 'key');
+
+ # Print out.
+ print "ok\n";
+
+ # Output like:
+ # #Error [..utils.pm:?] Parameter 'key' with array must have at least one item.
+
+=head1 EXAMPLE7
+
 =for comment filename=check_bool_ok.pl
 
  use strict;
@@ -555,7 +633,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE6
+=head1 EXAMPLE8
 
 =for comment filename=check_bool_fail.pl
 
@@ -578,7 +656,7 @@ Returns undef.
  # Output like:
  # #Error [..utils.pm:?] Parameter 'key' must be a bool (0/1).
 
-=head1 EXAMPLE7
+=head1 EXAMPLE9
 
 =for comment filename=check_code_ok.pl
 
@@ -599,7 +677,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE8
+=head1 EXAMPLE10
 
 =for comment filename=check_code_fail.pl
 
@@ -622,7 +700,7 @@ Returns undef.
  # Output like:
  # #Error [..utils.pm:?] Parameter 'key' must be a code.
 
-=head1 EXAMPLE9
+=head1 EXAMPLE11
 
 =for comment filename=check_isa_ok.pl
 
@@ -643,7 +721,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE10
+=head1 EXAMPLE12
 
 =for comment filename=check_isa_fail.pl
 
@@ -665,7 +743,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' must be a 'Test::MockObject' object.
 
-=head1 EXAMPLE11
+=head1 EXAMPLE13
 
 =for comment filename=check_length_ok.pl
 
@@ -687,7 +765,7 @@ Returns undef.
  # Output like:
  # ok
 
-=head1 EXAMPLE12
+=head1 EXAMPLE14
 
 =for comment filename=check_length_fail.pl
 
@@ -709,7 +787,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' has length greater than '2'.
 
-=head1 EXAMPLE13
+=head1 EXAMPLE15
 
 =for comment filename=check_number_ok.pl
 
@@ -729,7 +807,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE14
+=head1 EXAMPLE16
 
 =for comment filename=check_number_fail.pl
 
@@ -751,7 +829,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' must be a number.
 
-=head1 EXAMPLE15
+=head1 EXAMPLE17
 
 =for comment filename=check_number_of_items_ok.pl
 
@@ -796,7 +874,7 @@ Returns undef.
  # Output like:
  # ok
 
-=head1 EXAMPLE16
+=head1 EXAMPLE18
 
 =for comment filename=check_number_of_items_fail.pl
 
@@ -841,7 +919,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Test for Item 'value1' has multiple values.
 
-=head1 EXAMPLE17
+=head1 EXAMPLE19
 
 =for comment filename=check_regexp_ok.pl
 
@@ -861,7 +939,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE18
+=head1 EXAMPLE20
 
 =for comment filename=check_regexp_fail.pl
 
@@ -884,7 +962,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' does not match the specified regular expression.
 
-=head1 EXAMPLE19
+=head1 EXAMPLE21
 
 =for comment filename=check_required_ok.pl
 
@@ -904,7 +982,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE20
+=head1 EXAMPLE22
 
 =for comment filename=check_required_fail.pl
 
@@ -928,7 +1006,7 @@ Returns undef.
  # #Error [...utils.pm:?] Parameter 'key' is required.
 
 
-=head1 EXAMPLE21
+=head1 EXAMPLE23
 
 =for comment filename=check_string_begin_ok.pl
 
@@ -948,7 +1026,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE22
+=head1 EXAMPLE24
 
 =for comment filename=check_string_begin_fail.pl
 
@@ -971,7 +1049,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' must begin with defined string base.
 
-=head1 EXAMPLE23
+=head1 EXAMPLE25
 
 =for comment filename=check_strings_ok.pl
 
@@ -991,7 +1069,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE24
+=head1 EXAMPLE26
 
 =for comment filename=check_strings_fail.pl
 
