@@ -1,4 +1,5 @@
 0.18
+ - Add check_array_required().
 
 0.17 2023-07-09T12:51:58+02:00
  - Add check_regexp() function.
